--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="main">
         <div class="maintext">
             <div class="h1">
-                <h1>Facebook</h1>
+                <h1>facebook</h1>
                 <p>Facebook helps you connect and share<br> with the people in your life.</p>
             </div>
 
