--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <div class="f2body">
                 <div class="f2input">
                     <label for="email"></label>
-                    <input type="email" placeholder="Enter Email" value="">
+                    <input type="text" placeholder="User Name" value="">
                     <label for="email"></label>
-                    <input type="email" placeholder="Enter Email" value="">
-                  
+                    <input type="password" placeholder="password" value="">
+
                     <input class="blue" type="submit" placeholder="Enter Email" value="Log in">
                     <p>Forgotten Password?</p>
                     <hr style="background-color: rgb(255, 255, 255); height: .5px;
@@ -59,7 +59,8 @@
                     margin: 0 auto; border: none;">
 
                     <div class="green1">
-                    <input class="green" type="submit" value="Create new account"></div>
+                        <input class="green" type="submit" value="Create new account">
+                    </div>
 
                 </div>
 
@@ -70,9 +71,9 @@
             </div>
 
 
-<div class="lowertext">
-    <p><span class="bold">Create a Page</span> for a celebrity, brand or business</p>
-</div>
+            <div class="lowertext">
+                <p><span class="bold">Create a Page</span> for a celebrity, brand or business</p>
+            </div>
 
 
         </div>
